:sparkles: feat: atualizando readme do projeto